build_errors.txt
    Updating crates.io index
     Locking 1 package to latest compatible version
   Compiling libc v0.2.177
   Compiling stor v0.1.0 (/home/a/SecureCoding/Build-it/fix-it)
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> src/main.rs:9:1
  |
9 | #![feature(extern_types)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused variable: `token`
    --> src/main.rs:1310:9
     |
1310 |     mut token: *const core::ffi::c_char,
     |         ^^^^^ help: if this is intentional, prefix it with an underscore: `_token`
     |
     = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0554`.
warning: `stor` (bin "stor") generated 1 warning
error: could not compile `stor` (bin "stor") due to 1 previous error; 1 warning emitted
